--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,41 +1,48 @@
-name: Update README Progress
+name: CI Pipeline
 
 on:
-  schedule:
-    - cron: "0 0 * * *"   # Har kuni yarim tunda yangilanadi
-  workflow_dispatch:       # Qo‘lda ishga tushirish uchun
   push:
-    branches:
-      - main               # Har bir commitdan keyin ham ishlaydi
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  update-readme:
+  build-and-test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Calculate XP
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run lint
+        run: npm run lint --if-present
+
+      - name: Run tests
+        run: npm test --if-present
+
+      - name: Build project
+        run: npm run build --if-present
+
+  # Optional: Deployment job (faqat build muvaffaqiyatli bo‘lsa ishlaydi)
+  deploy:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Deploy to server
         run: |
-          COMMITS=$(git rev-list --count HEAD)
-          LEVEL=$((COMMITS / 50))
-          XP=$((COMMITS % 50 * 2))
-          echo "COMMITS=$COMMITS" >> $GITHUB_ENV
-          echo "LEVEL=$LEVEL" >> $GITHUB_ENV
-          echo "XP=$XP" >> $GITHUB_ENV
-
-      - name: Update README
-        run: |
-          sed -i "s|
-
-\[.*\]
-
- [0-9]*% — Level .*|[███████-------------] $XP% — Level $LEVEL (Commits: $COMMITS)|" README.md
-
-      - name: Commit changes
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git add README.md
-          git commit -m "Update progress bar"
-          git push
+          echo "Deploying..."
+          # Bu yerda haqiqiy deploy buyruqlaringni yozasan
+          # Masalan: scp/rsync yoki Vercel CLI
